test/type/pass/string.j
class A { Void main(){return;} }
class B {
  String a() {
    String asd;
    asd = null + null;
    return asd + asd + " " + asd + " " + null;
  }
}
