test/type/fail/readln_klass.j
class A{
  Void main() {
    A a;
    readln(a);
  }
}
